// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a primary image 1`] = `
<View>
  <RCTScrollView
    initialNumToRender={3}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View />
      </View>
      <View>
        <View>
          <ArticleImage
            captionOptions={
              Object {
                "caption": "A Caption",
                "credits": "Some Credits",
              }
            }
            imageOptions={
              Object {
                "display": "primary",
                "ratio": "3:2",
                "relativeHeight": undefined,
                "relativeHorizontalOffset": undefined,
                "relativeVerticalOffset": undefined,
                "relativeWidth": undefined,
                "uri": "https://image-2.io",
              }
            }
          />
        </View>
      </View>
      <View>
        <View>
          <ArticleExtras
            articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
            articleUrl="https://url.io"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`2. a fullwidth image 1`] = `
<View>
  <RCTScrollView
    initialNumToRender={3}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View />
      </View>
      <View>
        <View>
          <ArticleImage
            captionOptions={
              Object {
                "caption": "A Caption",
                "credits": "Some Credits",
              }
            }
            imageOptions={
              Object {
                "display": "fullwidth",
                "ratio": "3:2",
                "relativeHeight": undefined,
                "relativeHorizontalOffset": undefined,
                "relativeVerticalOffset": undefined,
                "relativeWidth": undefined,
                "uri": "https://image-2.io",
              }
            }
          />
        </View>
      </View>
      <View>
        <View>
          <ArticleExtras
            articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
            articleUrl="https://url.io"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`3. a secondary image 1`] = `
<View>
  <RCTScrollView
    initialNumToRender={3}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View />
      </View>
      <View>
        <View>
          <ArticleImage
            captionOptions={
              Object {
                "caption": "A Caption",
                "credits": "Some Credits",
              }
            }
            imageOptions={
              Object {
                "display": "secondary",
                "ratio": "3:2",
                "relativeHeight": undefined,
                "relativeHorizontalOffset": undefined,
                "relativeVerticalOffset": undefined,
                "relativeWidth": undefined,
                "uri": "https://image-2.io",
              }
            }
          />
        </View>
      </View>
      <View>
        <View>
          <ArticleExtras
            articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
            articleUrl="https://url.io"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`4. an inline image 1`] = `
<View>
  <RCTScrollView
    initialNumToRender={3}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View />
      </View>
      <View>
        <View>
          <ArticleImage
            captionOptions={
              Object {
                "caption": "A Caption",
                "credits": "Some Credits",
              }
            }
            imageOptions={
              Object {
                "display": "secondary",
                "ratio": "9:4",
                "relativeHeight": undefined,
                "relativeHorizontalOffset": undefined,
                "relativeVerticalOffset": undefined,
                "relativeWidth": undefined,
                "uri": "https://image-inline.io",
              }
            }
          />
        </View>
      </View>
      <View>
        <View>
          <ArticleExtras
            articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
            articleUrl="https://url.io"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
